# cryoet-pipeline

./: .gitignore  README.md  batchJul05-221306.adoc  batchJul05-221306.com  batchJul05-221306.ebt  pyproject.toml
docs/: agent_readiness.md  architecture_decisions.md  benchmark_strategy.md  handoff_digest.md  motioncor3_backend.md  mvp_plan.md  project_scope.md  qc_strategy.md  storage_policy.md
src/cryoet_pipeline/: __init__.py  artifacts.py  cli.py  empiar.py  models.py  mrc_validation.py  project.py  runtime.py  storage.py
src/cryoet_pipeline/backends/: __init__.py  alignment.py  alignment_qc.py  fiducials.py  final_stack.py  fine_alignment.py  motion.py  protocols.py  reconstruction.py  restoration.py  segmentation.py  stack.py
src/cryoet_pipeline/ingest/: __init__.py  mdoc.py
tests/: test_alignment_backend.py  test_alignment_qc_backend.py  test_artifacts.py  test_backends.py  test_cli.py  test_empiar.py  test_fiducials_backend.py  test_final_stack_backend.py  test_fine_alignment_backend.py  test_mdoc.py  test_models.py  test_motion_backend.py  test_project.py  test_reconstruction_backend.py  test_restoration_backend.py  test_runtime.py  test_segmentation_backend.py  test_stack_backend.py  test_storage.py
