[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "cryoet-pipeline"
version = "0.1.0"
description = "Extensible Python pipeline for cryo-ET preprocessing from raw tilt movies to tomograms."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Anna Berdichevskaia" }
]
dependencies = [
  "numpy>=1.26",
  "pydantic>=2.7",
  "typer>=0.12",
]

[project.optional-dependencies]
io = [
  "mrcfile>=1.5",
  "zarr>=2.18",
]
gpu = [
  "torch>=2.2",
]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.scripts]
cryoet = "cryoet_pipeline.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/cryoet_pipeline"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["cryoet_pipeline"]
